--- a/src/app/components/calculator/calculator.component.html
+++ b/src/app/components/calculator/calculator.component.html
@@ -10,9 +10,9 @@
             <mat-card-content>
                 <form [formGroup]="form">
                     <mat-form-field>
-                        <mat-label>Bruto jaarsalaris</mat-label>
+                        <mat-label>Bruto maandsalaris</mat-label>
                         
-                        <input matInput type="number" formControlName="grossYearSalary" />
+                        <input matInput type="number" formControlName="grossMonthSalary" />
                     </mat-form-field>
 
                     <mat-form-field>
